@@ -15,7 +15,8 @@ public class TestOpenTelemetryConfig
     public void testDefaults()
     {
         assertRecordedDefaults(recordDefaults(OpenTelemetryConfig.class)
-                .setEndpoint("http://localhost:4317"));
+                .setEndpoint("http://localhost:4317")
+                .setResourceAttributes(""));
     }
 
     @Test
@@ -23,10 +24,12 @@ public class TestOpenTelemetryConfig
     {
         Map<String, String> properties = ImmutableMap.<String, String>builder()
                 .put("tracing.exporter.endpoint", "http://example.com:1234")
+                .put("tracing.resource.attributes", "a=b,c=d")
                 .buildOrThrow();
 
         OpenTelemetryConfig expected = new OpenTelemetryConfig()
-                .setEndpoint("http://example.com:1234");
+                .setEndpoint("http://example.com:1234")
+                .setResourceAttributes("a=b,c=d");
 
         assertFullMapping(properties, expected);
     }
